--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "tree-sitter-html",
+  "name": "tree-sitter-html-eex",
   "version": "0.19.0",
-  "description": "HTML grammar for tree-sitter",
+  "description": "HTML grammar with support for eex template injections for tree-sitter",
   "main": "bindings/node",
   "keywords": [
     "parser",
-    "lexer"
+    "lexer",
+    "elixir"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tree-sitter/tree-sitter-html.git"
+    "url": "https://github.com/rockerBOO/tree-sitter-html-eex.git"
   },
   "authors": [
     "Max Brunsfeld <maxbrunsfeld@gmail.com>",
-    "Ashi Krishnan <queerviolet@github.com>"
+    "Ashi Krishnan <queerviolet@github.com>",
+    "Dave Lage <rockerboo@gmail.com>"
   ],
   "license": "MIT",
   "dependencies": {
@@ -23,6 +25,7 @@
     "tree-sitter-cli": "^0.19.1"
   },
   "scripts": {
+    "build": "tree-sitter generate",
     "test": "tree-sitter test && tree-sitter parse examples/*.html --quiet --time",
     "test-windows": "tree-sitter test"
   },
